src/main/deployments/ocp.jvm/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: quarkus-jpa-api-jvm
  name: quarkus-jpa-api-jvm-svc
spec:
  ports:
  - port: 8090
    #nodePort: 30202
    protocol: TCP
    targetPort: 8090
  selector:
    name: quarkus-jpa-api-jvm
  type: ClusterIP
status:
  loadBalancer: {}
