src/main/deployments/ocp.jvm/06.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: quarkus-jpa-api-jvm
  name: quarkus-jpa-api-jvm-route
spec:
  port:
    targetPort: 8090
  to:
    kind: Service
    name: quarkus-jpa-api-jvm-svc
    weight: 100
  wildcardPolicy: None
